syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_audit_log;

message DsAuditLogBean {

    int32 id= 1;
    int32 user_id=2;
    int32 resource_DsAuditLogBean=3;
    int32 operation= 4;
    optional string time=5;
    int32 resource_id= 6;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsAuditLogBeanService {
  rpc ListDsAuditLogBeans(ListDsAuditLogBeansRequest) returns (ListDsAuditLogBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsAuditLogBeans"
    };
  }

  rpc GetDsAuditLogBean(GetDsAuditLogBeanRequest) returns (DsAuditLogBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsAuditLogBeans/*}"
    };
  }

  rpc CreateDsAuditLogBean(CreateDsAuditLogBeanRequest) returns (DsAuditLogBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsAuditLogBeans"
      body: "DsAuditLogBean"
    };
  }

  rpc UpdateDsAuditLogBean(UpdateDsAuditLogBeanRequest) returns (DsAuditLogBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsAuditLogBean.name=DsAuditLogBeans/*}"
      body: "DsAuditLogBean"
    };
  }

  rpc DeleteDsAuditLogBean(DeleteDsAuditLogBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsAuditLogBeans/*}"
    };
  }
}

// message DsAuditLogBean {
// ! This should be defined elsewhere
// }

message ListDsAuditLogBeansRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsAuditLogBeansResponse {
  // The field name should match the noun "DsAuditLogBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsAuditLogBean DsAuditLogBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsAuditLogBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsAuditLogBeanRequest {
  // The parent resource name where the DsAuditLogBean is to be created.
  string parent = 1;

  // The DsAuditLogBean id to use for this DsAuditLogBean.
  string DsAuditLogBean_id = 2;

  // The DsAuditLogBean resource to create.
  // The field name should match the Noun in the method name.
  DsAuditLogBean DsAuditLogBean = 3;
}

message UpdateDsAuditLogBeanRequest {
  // The DsAuditLogBean resource which replaces the resource on the server.
  DsAuditLogBean DsAuditLogBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsAuditLogBeanRequest {
  // The resource name of the DsAuditLogBean to be deleted.
  string name = 1;
}
